# udmp-parser

./: .gitignore  LICENSE  README.md
.github/: Invoke-VisualStudio.ps1
.github/workflows/: udmp-parser.yml
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  udmp-parser.h
src/parser/: CMakeLists.txt  parser.cc
src/python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
src/python/src/: udmp_parser.cc  udmp_parser_utils.cc
src/python/stubs/: __init__.pyi
src/python/tests/: pytest.ini  requirements.txt  test_parser.py  utils.py
src/python/udmp_parser-stubs/: __init__.pyi  utils.pyi
