[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "udmp-parser"
version = "0.4"
description = "A Windows user minidump C++ parser library."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "0vercl0k", email = "0vercl0k@not-your-biz.net" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Assemblers",
    "Natural Language :: English",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/0vercl0k/udmp-parser"


[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp39"
cmake.minimum-version = "3.20"
cmake.args = [
    "-DBUILD_PARSER:BOOL=OFF",
    "-DBUILD_PYTHON_BINDING:BOOL=OFF",
    "-DBUILD_PYTHON_PACKAGE:BOOL=ON",
]

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
